# ml_project

./: .dockerignore  .gcloudignore  .gitattributes  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_payload.json
.github/workflows/: cd.yml  ci.yml
configs/: default.yaml  local_demo.yaml  smoke_test.yaml
configs/experiments/: exp2_single_probe_dl.yaml  exp5_fd_baseline.yaml  lstm_flow.yaml  (+1 more)
deploy/: asset_bundle.env
docs/: multi_probe_report.md
notebooks/: 01_eda_simulation_data.ipynb  02_feature_analysis.ipynb  03_experiment_results.ipynb
scripts/: build_link_geojson.py  convert_shp_to_geojson.py  dashboard.py  download_models.sh  eval_cf_ensemble.py  evaluate.py  extract_excel_mapping.py  extract_features.py  generate_scenarios.py  plot_release_results.py  prepare_residuals.py  print_metrics.py  run_all.py  run_console.py  run_experiment.py  run_simulation.py  smoke_test.py  test_train.py  train.py  train_multi_probe.py  train_window.py  validate_fcd.py
static/: console-dashboard.html  dashboard.html  health.html  link-history-map.html  mobile.html  portfolio.html  site.css
tests/: conftest.py  test_api.py  test_build_link_geojson.py  test_config.py  test_dataset.py  test_ensemble.py  test_fd_baseline.py  test_feature_registry.py  test_features.py  test_ground_truth.py  test_hyperopt.py  test_link_matcher.py  test_map_api.py  test_metrics.py  test_models.py  test_scenario_generator.py  test_state_classification.py  test_streaming.py  test_underwood.py
보고서/: walkthrough.md  결과walkthrough.md
(+109 files in other folders)
